kubernetes/apps/database/crunchy-postgres-operator/pgadmin/ingress.yaml
---
# trunk-ignore(checkov/CKV_K8S_21)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - &host pgadmin.${SECRET_DOMAIN}
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
